[gd_scene load_steps=2 format=3 uid="uid://cfafusdh4p6em"]

[ext_resource type="Script" path="res://GameManager.gd" id="1_vu1it"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_vu1it")

[node name="discussion timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="vote timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="game type text" type="Label" parent="."]
offset_left = 354.0
offset_top = 98.0
offset_right = 476.0
offset_bottom = 121.0
text = "Discussion time"

[node name="X but Y text" type="Label" parent="."]
offset_left = 309.0
offset_top = 188.0
offset_right = 513.0
offset_bottom = 263.0
text = "X
but
Y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Vote yes" type="Button" parent="."]
offset_left = 305.0
offset_top = 341.0
offset_right = 505.0
offset_bottom = 411.0
text = "Press button"

[node name="Vote yes2" type="Button" parent="."]
offset_left = 307.0
offset_top = 436.0
offset_right = 507.0
offset_bottom = 506.0
text = "Don't press"

[connection signal="timeout" from="discussion timer" to="." method="_on_discussion_timer_timeout"]
[connection signal="timeout" from="vote timer" to="." method="_on_vote_timer_timeout"]
